# SigmaDev-Library

./: .gitignore  CMakeLists.txt  Commits.md  LICENSE  README.md
impl/: CMakeLists.txt
impl/include/SigmaDev/: Core.h  Miscellaneous.h
impl/include/SigmaDev/Core/: Core.h
impl/include/SigmaDev/Miscellaneous/: Any.h  Class.h  Common.h  Compare.h  Composite.h  Data.h  Exception.h  ID.h  IOString.h  Impl.h  Path.h  References.h  Test.h  Type.h  TypeIndex.h
impl/src/SigmaDev/: main.cpp
impl/src/SigmaDev/Core/: Core.cpp
impl/src/SigmaDev/Miscellaneous/: Any.cpp  Class.cpp  Common.cpp  Compare.cpp  Data.cpp  Exception.cpp  Impl.cpp  TypeIndex.cpp
